# foolish_trash_bin

./: .gitignore  CMakeLists.txt  README.md
devices/intel_rs/: CMakeLists.txt  intel_rs.cpp  intel_rs.hpp
include/: position.hpp
modules/april_tag/: CMakeLists.txt  april_tag.cpp  april_tag.hpp
modules/solve_pose/: CMakeLists.txt  solve_pose.cpp  solve_pose.hpp
modules/yolov5/: CMakeLists.txt  utils.hpp  yolov5_onnx.cpp  yolov5_onnx.hpp  yolov5_openvino.cpp  yolov5_openvino.hpp
src/: main.cpp
